--- a/arch/arm/boot/dts/s3c2440-mini2440-dt.dts
+++ b/arch/arm/boot/dts/s3c2440-mini2440-dt.dts
@@ -4,6 +4,7 @@
 
 /dts-v1/;
 #include "s3c2440.dtsi"
+#include <dt-bindings/interrupt-controller/irq.h>
 
 / {
 	model = "MINI2440";
@@ -15,6 +16,22 @@
 
 	chosen {
 		bootargs = "noinitrd root=/dev/mtdblock3 init=/linuxrc console=ttySAC0,115200 ignore_loglevel earlyprintk";
+	};
+	srom-cs4@20000000 {
+		compatible = "simple-bus";
+		#address-cells = <1>;
+		#size-cells = <1>;
+		reg = <0x20000000 0x8000000>;
+		ranges;
+
+		ethernet@20000000 {
+			compatible = "davicom,dm9000";
+			reg = <0x20000000 0x2 0x20000004 0x2>;
+			interrupt-parent = <&gpf>;
+			interrupts = <7 IRQ_TYPE_EDGE_RISING>;
+			local-mac-address = [00 00 de ad be ef];
+			davicom,no-eeprom;
+		};
 	};
 };
 &watchdog {
